# Classrum-Data

./: .gitignore  .gitlab-ci.yml  ListNumbersPerSubject.py  README.md  activateenv.sh  add-to-db.py  main.py  pyproject.toml  requirements.txt  setupdocker.sh  subject_recognition_model.joblib  train.txt
