[project]
name = "classrum-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jieba",
    "numpy>=2.2.2",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
jieba = { git = "https://github.com/APCLab/jieba-tw.git" }
